# md-bug

./: .gitignore  Dockerfile  Dockerfile.root  GEMINI.md  README.md  memories.md  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml  GEMINI.md  README.md  auth.md
backend/src/: api.rs  bug_id_cache.rs  bug_id_cache_test.rs  cli.rs  component_id_cache.rs  debug_tool.rs  fake_data.rs  lib.rs  main.rs  search_string.rs  search_string_test.rs  user.rs
backend/src/api/: api_test.rs  bug_id_cache.rs
backend/src/user/: user_test.rs
frontend/: .gitignore  GEMINI.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: bundle.css  bundle.js  index.html
frontend/src/: App.tsx  BugView.tsx  ComponentEditorView.tsx  CreateComponentView.tsx  CreateIssueView.tsx  HomeView.tsx  Layout.tsx  LoginView.tsx  index.tsx  styles.css  theme.ts
frontend/src/api/: api.ts  backend_api.ts  fakeApi.ts  fake_api.ts  storage.ts
integration_tests/: cli.test.ts  integration.test.ts  jest.config.js  jest.setup.ts  package.json  pnpm-lock.yaml  remote_cli.test.ts  tsconfig.json
skills/: md-bug-management.skill
skills/md-bug-management/: SKILL.md
skills/md-bug-management/references/: cli-payloads.md
