[package]
name = "md-bug-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rkyv = { version = "0.7.44", features = ["validation"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
walkdir = "2.5.0"
chrono = "0.4.38"
anyhow = "1.0.83"
regex = "1.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytecheck = "0.6.12"
tempfile = "3.10.1"
fake = "5.1.0"
rand = "0.8"
http-body-util = "0.1.1"
http = "1.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "md-bug-backend"
path = "src/main.rs"

[[bin]]
name = "md-bug-cli"
path = "src/cli.rs"

[[bin]]
name = "debug_tool"
path = "src/debug_tool.rs"
